--- a/sections/experience.html
+++ b/sections/experience.html
@@ -228,7 +228,10 @@
     </div>
     <div class="timeline-expand">
       <div class="expand-body">
-        <p>Gained practical experience in industrial processes, safety procedures, and workflow optimization.</p>
+        <p>During my internship at Ramada Aços, completed as part of the Professional Course in Mechatronics, I acquired valuable hands-on experience in an industrial environment.
+          My responsibilities included the maintenance and repair of small- and medium-sized industrial machinery, ensuring operational reliability and adherence to safety standards.
+          Additionally, I contributed to the design, development, and implementation of industrial control and automation circuits, supporting the optimisation of production processes.
+          This experience strengthened my technical expertise, problem‑solving skills, and overall understanding of industrial automation systems.</p>
         <div class="expand-gallery">
           <img src="images/experiences/ramada1.jpg" alt="">
         </div>
