--- a/sections/experience.html
+++ b/sections/experience.html
@@ -1,5 +1,5 @@
 <!-- EXPERIENCE -->
-<section class="section">
+<section id="experience" class="section">
 <h2>Experience</h2>
 <div class="timeline">
   <div class="timeline-item">
