--- a/sections/experience.html
+++ b/sections/experience.html
@@ -233,7 +233,7 @@
           Additionally, I contributed to the design, development, and implementation of industrial control and automation circuits, supporting the optimisation of production processes.
           This experience strengthened my technical expertise, problem‑solving skills, and overall understanding of industrial automation systems.</p>
         <div class="expand-gallery">
-          <img src="images/ramada1.jpg" alt="">
+          <img src="images/ramada1.png" alt="">
         </div>
       </div>
     </div>
