--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="script.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
-  const sections = ['hero', 'research', 'education', 'experience', 'publications', 'presentation', 'tutoring'];
+  const sections = ['hero', 'education', 'experience', 'publications', 'presentation', 'tutoring'];
   const content = document.getElementById('content');
 
   for (const section of sections) {
