--- a/sections/hero.html
+++ b/sections/hero.html
@@ -28,6 +28,9 @@
         Email
         </a>
       </div>
+      <div class="hero-cta">
+      <a href="#tutoring" class="tutoring-button">Tutoring</a>
+      </div>
     </div>
   </div>
 </section>
