--- a/sections/hero.html
+++ b/sections/hero.html
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="hero-cta">
-      <a href="#tutoring" style="font-family: 'Forte', cursive; font-size: 3.3em; margin:0;" class="tutoring-button">Tutoring</a>
+      <a href="#tutoring" style="font-family: 'Forte', cursive; font-size: 3.3em; margin:0;" class="tutoring-button">Cientificamente</a>
       </div>
     </div>
   </div>
