--- a/sections/experience.html
+++ b/sections/experience.html
@@ -207,7 +207,9 @@
     </div>
     <div class="timeline-expand">
       <div class="expand-body">
-        <p>Reviewed student projects and contributed to planning of academic events and workshops.</p>
+        <p>RAs a Scientific Committee Member of UBIQUÍMICA, a university student group associated with the BSc in Industrial Chemistry and Biochemistry, I actively contributed to the planning and organisation of academic and scientific activities. My role involved supporting the coordination of scientific events, reviewing and structuring programme content, and assisting with logistical and organisational tasks.</p>
+        <p>A key responsibility was my involvement in the organisation of the Chemistry and Biochemistry Conference Days, where I helped ensure the scientific quality of the event, facilitated communication with invited speakers, and contributed to the smooth execution of sessions. Through this role, I developed strong organisational, teamwork, and scientific communication skills, while actively engaging with the academic community and promoting knowledge exchange among students and researchers.
+</p>
         <div class="expand-gallery">
           <img src="images/experiences/ubiquimica2.jpg" alt="">
         </div>
