--- a/sections/experience.html
+++ b/sections/experience.html
@@ -114,7 +114,7 @@
   <div class="timeline-item">
     <div class="timeline-card">
       <div class="timeline-header">
-        <img src="images/logos/ubi.png" alt="UBI — UBIQUÍMICA">
+        <img src="images/logos/ubiquimica.png" alt="UBI — UBIQUÍMICA">
         <div>
           <strong>Vice-President — UBIQUÍMICA</strong>
           <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior</div>
@@ -186,9 +186,11 @@
     </div>
     <div class="timeline-expand">
       <div class="expand-body">
-        <p>Performed operational tasks in the production line, quality control, and packaging processes.</p>
+        <p>During my experience at Nestlé, I was responsible for activities related to the manufacturing process and formulation (recipe) of breakfast cereals. My role focused on ensuring that production followed established quality, safety, and efficiency standards, while maintaining consistency in product formulation.</p>
+        <p>I was integrated into a multidisciplinary team, collaborating closely with production, quality, and technical staff to support daily manufacturing operations. My responsibilities included monitoring production parameters, assisting in recipe preparation and adjustments, and contributing to process optimization to ensure product quality and compliance with internal specifications.</p>
+        <p>This experience strengthened my ability to work effectively in a team-oriented industrial environment, enhanced my understanding of large-scale food manufacturing processes, and developed my skills in communication, problem-solving, and adherence to strict quality standards.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/nestle1.jpg" alt="">
+          <img src="images/nestle1.jpeg" alt="">
         </div>
       </div>
     </div>
@@ -198,7 +200,7 @@
   <div class="timeline-item">
     <div class="timeline-card">
       <div class="timeline-header">
-        <img src="images/logos/ubi.png" alt="UBI — UBIQUÍMICA">
+        <img src="images/logos/ubiquimica.png" alt="UBI — UBIQUÍMICA">
         <div>
           <strong>Scientific Committee Member — UBIQUÍMICA</strong>
           <div class="meta">Aug 2018 – Aug 2019 · University of Beira Interior</div>
@@ -207,11 +209,11 @@
     </div>
     <div class="timeline-expand">
       <div class="expand-body">
-        <p>RAs a Scientific Committee Member of UBIQUÍMICA, a university student group associated with the BSc in Industrial Chemistry and Biochemistry, I actively contributed to the planning and organisation of academic and scientific activities. My role involved supporting the coordination of scientific events, reviewing and structuring programme content, and assisting with logistical and organisational tasks.</p>
+        <p>As a Scientific Committee Member of UBIQUÍMICA, a university student group associated with the BSc in Industrial Chemistry and Biochemistry, I actively contributed to the planning and organisation of academic and scientific activities. My role involved supporting the coordination of scientific events, reviewing and structuring programme content, and assisting with logistical and organisational tasks.</p>
         <p>A key responsibility was my involvement in the organisation of the Chemistry and Biochemistry Conference Days, where I helped ensure the scientific quality of the event, facilitated communication with invited speakers, and contributed to the smooth execution of sessions. Through this role, I developed strong organisational, teamwork, and scientific communication skills, while actively engaging with the academic community and promoting knowledge exchange among students and researchers.
 </p>
         <div class="expand-gallery">
-          <img src="images/experiences/ubiquimica2.jpg" alt="">
+          <img src="images/ubiquimica1.jpg" alt="">
         </div>
       </div>
     </div>
