--- a/sections/hero.html
+++ b/sections/hero.html
@@ -6,7 +6,7 @@
     <div class="avatar-fallback" style="display:none">GM</div>
     <div>
       <h1>Gustavo Pinho Maia</h1>
-      <div class="role">PhD student in Chemistry (Astrobiology); Organic Chemistry Tutor </div>
+      <div class="role">PhD student in Chemistry (Astrobiology)</div>
       <p>
         Research on mechanochemical and shock-driven synthesis of organic molecules
         relevant to prebiotic chemistry and the origin of life.
@@ -24,12 +24,14 @@
         <a href="mailto:gustavopinho.maia@mnhn.fr" id="emailLink" aria-label="Email Gustavo P. Maia" title="Email Gustavo P. Maia">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" role="img" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M2 6.5C2 5.67 2.67 5 3.5 5h17c.83 0 1.5.67 1.5 1.5v11c0 .83-.67 1.5-1.5 1.5h-17A1.5 1.5 0 0 1 2 17.5v-11zM4 7v.83l8 5.33 8-5.33V7l-8 5-8-5z"/>
+        
         </svg>
         Email
         </a>
+        <a href="#tutoring" style="font-family: 'Forte', cursive; font-size: 3.3em; margin:0;" class="tutoring-button">Cientificamente</a>
       </div>
       <div class="hero-cta">
-      <a href="#tutoring" style="font-family: 'Forte', cursive; font-size: 3.3em; margin:0;" class="tutoring-button">Cientificamente</a>
+      
       </div>
     </div>
   </div>
