--- a/sections/experience.html
+++ b/sections/experience.html
@@ -190,7 +190,7 @@
         <p>I was integrated into a multidisciplinary team, collaborating closely with production, quality, and technical staff to support daily manufacturing operations. My responsibilities included monitoring production parameters, assisting in recipe preparation and adjustments, and contributing to process optimization to ensure product quality and compliance with internal specifications.</p>
         <p>This experience strengthened my ability to work effectively in a team-oriented industrial environment, enhanced my understanding of large-scale food manufacturing processes, and developed my skills in communication, problem-solving, and adherence to strict quality standards.</p>
         <div class="expand-gallery">
-          <img src="images/nestle1.png" alt="">
+          <img src="images/nestle1.jpg" alt="">
         </div>
       </div>
     </div>
