--- a/sections/hero.html
+++ b/sections/hero.html
@@ -27,10 +27,11 @@
         </svg>
         Email
         </a>
+        <a href="#tutoring"
+          class="tutoring-button"
+          style="font-family:'Forte', cursive; font-size:1.2em;">
+          Cientifica(mente)
+        </a>
       </div>
-      <div class="hero-cta">
-      <a href="#tutoring" style="font-family: 'Forte', cursive; font-size: 3.3em; margin:0;" class="tutoring-button">Cientificamente</a>
-      </div>
-    </div>
   </div>
 </section>
