--- a/sections/hero.html
+++ b/sections/hero.html
@@ -1,9 +1,13 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-card">
-    <img src="images/avatar.jpg" alt="Gustavo Maia" class="avatar-img"
+    <div class="avatar-wrapper">
+      <img src="images/avatar.jpg" alt="Gustavo Maia" class="avatar-img"
       onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
-    <div class="avatar-fallback" style="display:none">GM</div>
+      <div class="avatar-fallback" style="display:none">GM</div>
+      <div class="avatar-credit"> <em>(c) IMPMC </em></div>
+    </div>
+    
     <div>
       <h1>Gustavo Pinho Maia</h1>
       <div class="role">PhD student in Chemistry (Astrobiology)</div>
