--- a/sections/hero.html
+++ b/sections/hero.html
@@ -5,7 +5,7 @@
       <img src="images/avatar.jpg" alt="Gustavo Maia" class="avatar-img"
       onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
       <div class="avatar-fallback" style="display:none">GM</div>
-      <div class="avatar-credit"> <em>(c) IMPMC - Cécile Duflot </em></div>
+      <div class="avatar-credit"> <em>Credit: IMPMC - Cécile Duflot </em></div>
     </div>
     
     <div>
