--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="site">
+  
   <!-- Dynamic sections will load here -->
   <div id="content"></div>
 </div>
@@ -16,7 +17,7 @@
 <script src="script.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
-  const sections = ['hero', 'education', 'experience', 'publications', 'tutoring'];
+  const sections = ['hero', 'education', 'experience', 'publications', 'presentations' ,'tutoring'];
   const content = document.getElementById('content');
 
   for (const section of sections) {
