--- a/sections/experience.html
+++ b/sections/experience.html
@@ -125,7 +125,7 @@
       <div class="expand-body">
         <p>Managed student projects, coordinated events, and facilitated communication between members.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/ubiquimica1.jpg" alt="">
+          <img src="images/experiences/ubiquimica2.png" alt="">
         </div>
       </div>
     </div>
