--- a/sections/presentations.html
+++ b/sections/presentations.html
@@ -6,30 +6,30 @@
     <div class="timeline-item">
       <div class="timeline-card">
         <div class="timeline-header">
+          <img src="images/logos/conference.png" alt="Conference">
           <div>
-            <strong>
-              Shock-driven synthesis of organic compounds under planetary conditions
-            </strong>
+            <strong>Shock-driven synthesis of organic compounds under planetary conditions</strong>
             <div class="meta">
               Oral presentation · Astrobiology Conference · Paris · 2024
             </div>
           </div>
         </div>
+        <p><em>Impact-induced chemistry under early planetary environments</em></p>
       </div>
     </div>
 
     <div class="timeline-item">
       <div class="timeline-card">
         <div class="timeline-header">
+          <img src="images/logos/eana.png" alt="EANA">
           <div>
-            <strong>
-              Mechanochemical pathways toward prebiotic molecules
-            </strong>
+            <strong>Mechanochemical pathways toward prebiotic molecules</strong>
             <div class="meta">
               Poster presentation · EANA Meeting · Lisbon · 2023
             </div>
           </div>
         </div>
+        <p><em>Solid-state routes to prebiotic molecular complexity</em></p>
       </div>
     </div>
 
