--- a/sections/presentations.html
+++ b/sections/presentations.html
@@ -1,37 +1,278 @@
-<section id="presentations" class="section">
-  <h2>Presentations</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Presentations</title>
+  <style>
+    :root{
+      --bg:#0b1020;
+      --card:rgba(255,255,255,.04);
+      --border:rgba(255,255,255,.08);
+      --text:#e7edf6;
+      --muted:#9aa4b2;
+      --accent:#7dd3fc;
+      --accent-strong:#60a5fa;
+      --radius-lg:18px;
+      --radius-md:12px;
+      --shadow:0 10px 30px rgba(0,0,0,.6);
+      --max-width:1120px;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      color-scheme:dark;
+    }
 
-  <div class="timeline">
+    *{box-sizing:border-box}
+    body {
+      margin: 0;
+      min-height: 100vh;
+      position: relative;
+      color: var(--text);
+      background: linear-gradient(180deg, rgba(7,12,29,1), rgba(11,16,32,1) 70%);
+      overflow-x: hidden;
+      padding: 40px 20px;
+    }
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <div class="timeline-header">
-          <img src="images/logos/conference.png" alt="Conference">
-          <div>
-            <strong>Shock-driven synthesis of organic compounds under planetary conditions</strong>
-            <div class="meta">
-              Oral presentation · Astrobiology Conference · Paris · 2024
+    body::before{
+      content: "";
+      position: fixed;
+      inset: 0;
+      z-index: -3;
+      pointer-events: none;
+      background-image:
+        radial-gradient(40vw 30vw at 10% 20%, rgba(124,58,237,0.14), transparent 40%),
+        radial-gradient(50vw 36vw at 75% 10%, rgba(34,211,238,0.12), transparent 45%),
+        radial-gradient(36vw 26vw at 40% 80%, rgba(59,130,246,0.10), transparent 48%),
+        radial-gradient(28vw 18vw at 85% 70%, rgba(236,72,153,0.06), transparent 60%);
+      filter: blur(60px) saturate(110%);
+      mix-blend-mode: screen;
+      opacity: 0.95;
+    }
+
+    .site{
+      max-width:var(--max-width);
+      margin:0 auto;
+      position: relative;
+      z-index: 0;
+    }
+
+    .section{margin-bottom:64px}
+
+    h2{margin:0 0 20px 0; font-size: 2em;}
+
+    .timeline {
+      position: relative;
+      padding-left: 28px;
+    }
+
+    .timeline::before {
+      content: "";
+      position: absolute;
+      left: 8px;
+      top: 0;
+      bottom: 0;
+      width: 2px;
+      background: rgba(255,255,255,.15);
+    }
+
+    .timeline-item {
+      position: relative;
+      margin-bottom: 32px;
+      opacity: 0;
+      transform: translateY(24px);
+      transition: opacity .6s ease, transform .6s ease;
+      cursor: pointer;
+    }
+
+    .timeline-item.visible {
+      opacity: 1;
+      transform: none;
+    }
+
+    .timeline-item::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: var(--accent);
+      z-index: 1;
+    }
+
+    .timeline-card {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius-md);
+      padding: 16px 16px 16px 36px;
+      position: relative;
+    }
+
+    .timeline-header {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+    }
+
+    .timeline-header img {
+      width: 48px;
+      height: 48px;
+      object-fit: contain;
+    }
+
+    .meta{font-size:15px;color:var(--muted)}
+    .timeline-card p{margin:8px 0 0}
+
+    .timeline-expand {
+      overflow: hidden;
+      max-height: 0;
+      transition: max-height 0.5s cubic-bezier(0.4, 0, 0.2, 1), padding 0.4s ease;
+      padding: 0 0;
+      margin-top: 8px;
+    }
+    
+    .timeline-expand.open {
+      padding: 12px 16px;
+      border-left: 2px solid var(--accent);
+      border-radius: 0 0 var(--radius-md) var(--radius-md);
+      max-height: 2000px;
+      background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));
+    }
+
+    .expand-body{
+      font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+    }
+
+    .expand-body p{
+      font-size:15px;
+      line-height:1.7;
+      color:var(--text);
+      margin:10px 0 14px;
+      letter-spacing:0.1px;
+    }
+
+    .expand-gallery{
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(220px, 1fr));
+      gap:16px;
+      margin-top: 14px;
+    }
+
+    .expand-gallery img{
+      width:100%;
+      height:160px;
+      object-fit:cover;
+      border-radius:12px;
+      border:1px solid var(--border);
+      box-shadow:0 8px 22px rgba(0,0,0,.6);
+    }
+  </style>
+</head>
+<body>
+  <div class="site">
+    <section id="presentations" class="section">
+      <h2>Presentations</h2>
+
+      <div class="timeline">
+
+        <div class="timeline-item">
+          <div class="timeline-card">
+            <div class="timeline-header">
+              <img src="images/logos/conference.png" alt="Conference">
+              <div>
+                <strong>Shock-driven synthesis of organic compounds under planetary conditions</strong>
+                <div class="meta">
+                  Oral presentation · Astrobiology Conference · Paris · 2024
+                </div>
+              </div>
+            </div>
+            <p><em>Impact-induced chemistry under early planetary environments</em></p>
+          </div>
+          <div class="timeline-expand">
+            <div class="expand-body">
+              <p>This presentation explored the mechanisms by which shock waves generated from planetary impacts can drive the synthesis of complex organic molecules. We investigated how the extreme pressures and temperatures created during impact events on early Earth and other planetary bodies could have facilitated prebiotic chemistry.</p>
+              <p>Key topics covered included shock compression experiments, thermodynamic modeling of impact conditions, and detection of synthesized organic compounds relevant to the origin of life.</p>
+              <div class="expand-gallery">
+                <img src="https://images.unsplash.com/photo-1614730321146-b6fa6a46bcb4?w=400" alt="Planetary impact simulation">
+                <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=400" alt="Space environment">
+                <img src="https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?w=400" alt="Laboratory setup">
+              </div>
             </div>
           </div>
         </div>
-        <p><em>Impact-induced chemistry under early planetary environments</em></p>
-      </div>
-    </div>
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <div class="timeline-header">
-          <img src="images/logos/eana.png" alt="EANA">
-          <div>
-            <strong>Mechanochemical pathways toward prebiotic molecules</strong>
-            <div class="meta">
-              Poster presentation · EANA Meeting · Lisbon · 2023
+        <div class="timeline-item">
+          <div class="timeline-card">
+            <div class="timeline-header">
+              <img src="images/logos/eana.png" alt="EANA">
+              <div>
+                <strong>Mechanochemical pathways toward prebiotic molecules</strong>
+                <div class="meta">
+                  Poster presentation · EANA Meeting · Lisbon · 2023
+                </div>
+              </div>
+            </div>
+            <p><em>Solid-state routes to prebiotic molecular complexity</em></p>
+          </div>
+          <div class="timeline-expand">
+            <div class="expand-body">
+              <p>This poster presentation detailed our research into mechanochemical reactions as alternative pathways for generating prebiotic molecules. Unlike traditional solution-based chemistry, mechanochemical processes involve grinding and milling solid reactants, which can create unique reaction conditions relevant to early Earth environments.</p>
+              <p>We demonstrated how mechanical energy can drive the formation of amino acids, nucleobases, and other building blocks of life without the need for aqueous solutions, opening new possibilities for understanding chemical evolution in diverse planetary settings.</p>
+              <div class="expand-gallery">
+                <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?w=400" alt="Molecular structures">
+                <img src="https://images.unsplash.com/photo-1603126857599-f6e157fa2fe6?w=400" alt="Research equipment">
+              </div>
             </div>
           </div>
         </div>
-        <p><em>Solid-state routes to prebiotic molecular complexity</em></p>
-      </div>
-    </div>
 
+      </div>
+    </section>
   </div>
-</section>
+
+  <script>
+    // IntersectionObserver for fade-in
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(e => {
+        if (e.isIntersecting) {
+          e.target.classList.add("visible");
+          observer.unobserve(e.target);
+        }
+      });
+    }, { threshold: 0.2 });
+
+    // Wire up timeline items for accordion behavior
+    function wireUpTimelineItems() {
+      document.querySelectorAll('.timeline-item').forEach(item => {
+        if (item.__wired) return;
+        item.__wired = true;
+
+        item.addEventListener('click', e => {
+          const t = e.target.tagName.toLowerCase();
+          if (['a', 'button', 'input', 'textarea'].includes(t)) return;
+
+          const expand = item.querySelector('.timeline-expand');
+          if (!expand) return;
+          const isOpen = expand.classList.contains('open');
+
+          // Close others
+          document.querySelectorAll('.timeline-expand.open').forEach(el => {
+            if (el !== expand) el.classList.remove('open');
+          });
+
+          // Toggle this one
+          if (!isOpen) expand.classList.add('open');
+        });
+      });
+    }
+
+    // Initialize
+    document.querySelectorAll(".timeline-item").forEach(i => {
+      observer.observe(i);
+    });
+
+    wireUpTimelineItems();
+  </script>
+</body>
+</html>
