--- a/sections/hero.html
+++ b/sections/hero.html
@@ -3,9 +3,9 @@
   <div class="hero-card">
     <div class="avatar-wrapper">
       <img src="images/avatar.jpg" alt="Gustavo Maia" class="avatar-img"
-      onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
+        onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
       <div class="avatar-fallback" style="display:none">GM</div>
-      <div class="avatar-credit"> <em>Credit: IMPMC - Cécile Duflot </em></div>
+      <div class="avatar-credit"><em>Credit: IMPMC - Cécile Duflot</em></div>
     </div>
     
     <div>
@@ -25,17 +25,16 @@
         <a href="https://www.researchgate.net/profile/Gustavo_Maia2" target="_blank" rel="noopener noreferrer">
           <img src="images/logos/researchgate.png" width="20" height="20" alt="ResearchGate"> ResearchGate
         </a>
-        <a href="mailto:gustavopinho.maia@mnhn.fr" id="emailLink" aria-label="Email Gustavo P. Maia" title="Email Gustavo P. Maia">
+        <a href="mailto:gustavopinho.maia@mnhn.fr" id="emailLink" aria-label="Email Gustavo P. Maia">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" role="img" aria-hidden="true" focusable="false">
-          <path fill="currentColor" d="M2 6.5C2 5.67 2.67 5 3.5 5h17c.83 0 1.5.67 1.5 1.5v11c0 .83-.67 1.5-1.5 1.5h-17A1.5 1.5 0 0 1 2 17.5v-11zM4 7v.83l8 5.33 8-5.33V7l-8 5-8-5z"/>
-        </svg>
-        Email
+            <path fill="currentColor" d="M2 6.5C2 5.67 2.67 5 3.5 5h17c.83 0 1.5.67 1.5 1.5v11c0 .83-.67 1.5-1.5 1.5h-17A1.5 1.5 0 0 1 2 17.5v-11zM4 7v.83l8 5.33 8-5.33V7l-8 5-8-5z"/>
+          </svg>
+          Email
         </a>
-        <a href="#tutoring"
-          class="tutoring-button"
-          style="font-family:'Forte', cursive; font-size:1.2em;">
+        <a href="#tutoring" class="tutoring-button" style="font-family:'Forte', cursive; font-size:1.2em;">
           Cientifica(mente)
         </a>
       </div>
+    </div>
   </div>
 </section>
