--- a/sections/publications.html
+++ b/sections/publications.html
@@ -3,78 +3,55 @@
   <h2>Publications</h2>
   <div class="timeline">
 
-    <!-- Publication 1 -->
     <div class="timeline-item publication">
       <div class="timeline-card">
         <div class="timeline-header">
           <div>
             <strong>Mechanochemical Reactivity of Ribonucleosides Mediated by Inorganic Species</strong>
-            <div class="meta">
-              Gustavo P. Maia, Catarina Gonçalves, Ana J. Carvalho, Vânia André, Adelino Galvão, Ana P. C. Ribeiro, Pedro F. Pinheiro and José Armando Luísa da Silva · 2025 · Applied Sciences
-            </div>
+            <div class="meta">Gustavo P. Maia, Catarina Gonçalves, Ana J. Carvalho, Vânia André, Adelino Galvão, Ana P. C. Ribeiro, Pedro F. Pinheiro and José Armando Luísa da Silva · 2025 · Applied Sciences</div>
           </div>
         </div>
         <p><em>Click to view abstract</em></p>
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p>Metal species and carbonate are often found as minerals in extraterrestrial rocky bodies.
-            Based on this, the mechanochemical-induced degradation of canonical purine and pyrimidine ribonucleosides into their corresponding nucleobases mediated by some of the main constituents of those materials (iron, nickel, or aluminum) was accomplished.
-            In some cases, the previous heating of the samples intensified mechanochemical degradation.
-            Additionally, carbonate acts as an activator for ribonucleoside degradation with a catalyst (a Lewis acid ion); however, it has almost no effect on ribonucleoside degradation in the absence of a catalyst.
-            These results can contribute to the hypothesis that organic matter in extraterrestrial samples could have undergone mechanochemical reactions (i.e., shock/impact events), from its formation until its journey to Earth.
-            Mechanochemical energy could occur in planetesimal accretion, asteroid formation (i.e., through planetesimal disintegration), and meteoroid atmospheric entry.
-            Additionally, this hypothesis can clarify and relate some identified biosignatures with pathways of prebiological evolution.</p>
+          <p>Metal species and carbonate are often found as minerals in extraterrestrial rocky bodies. Based on this, the mechanochemical-induced degradation of canonical purine and pyrimidine ribonucleosides into their corresponding nucleobases mediated by some of the main constituents of those materials (iron, nickel, or aluminum) was accomplished. In some cases, the previous heating of the samples intensified mechanochemical degradation. Additionally, carbonate acts as an activator for ribonucleoside degradation with a catalyst (a Lewis acid ion); however, it has almost no effect on ribonucleoside degradation in the absence of a catalyst. These results can contribute to the hypothesis that organic matter in extraterrestrial samples could have undergone mechanochemical reactions (i.e., shock/impact events), from its formation until its journey to Earth. Mechanochemical energy could occur in planetesimal accretion, asteroid formation (i.e., through planetesimal disintegration), and meteoroid atmospheric entry. Additionally, this hypothesis can clarify and relate some identified biosignatures with pathways of prebiological evolution.</p>
           <p><a href="https://doi.org/10.3390/app15031363" target="_blank" rel="noopener noreferrer"><strong>DOI: 10.3390/app15031363</strong></a></p>
         </div>
       </div>
     </div>
 
-    <!-- Publication 2 -->
     <div class="timeline-item publication">
       <div class="timeline-card">
         <div class="timeline-header">
           <div>
             <strong>Shock-Induced Degradation of Guanosine and Uridine Promoted by Nickel and Carbonate</strong>
-            <div class="meta">
-              Gustavo P. Maia, José Armando Luísa da Silva, Vânia André and Adelino M. Galvão · 2023 · Molecules
-            </div>
+            <div class="meta">Gustavo P. Maia, José Armando Luísa da Silva, Vânia André and Adelino M. Galvão · 2023 · Molecules</div>
           </div>
         </div>
-        <p><em>Click to view abstract</em></ps>
+        <p><em>Click to view abstract</em></p>
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p>Experimental studies of the degradation of two ribonucleosides (guanosine and uridine) were carried out by making use of mechanochemistry.
-            Mechanochemical experiments reveal the decomposition of guanosine and uridine, promoted by nickel(II) and carbonate ions, into guanine and uracil, respectively.
-            These nucleobases were identified by HPLC and 1H NMR spectroscopy (this applied only to uracil).
-            Additionally, density-functional theory (DFT) methodologies were used to probe the energetic viability of several degradation pathways, including in the presence of the abovementioned ions.
-            Three mechanisms were analysed via ribose ring-opening: dry, single-molecule water-assisted, and metal-assisted, wherein the last two mechanisms confirmed the mechanochemical degradation of both ribonucleosides into respective nucleobase moieties.
-            These results can contribute to an astrobiological interpretation of the extraterrestrial sample’s contents.</p>
+          <p>Experimental studies of the degradation of two ribonucleosides (guanosine and uridine) were carried out by making use of mechanochemistry. Mechanochemical experiments reveal the decomposition of guanosine and uridine, promoted by nickel(II) and carbonate ions, into guanine and uracil, respectively. These nucleobases were identified by HPLC and 1H NMR spectroscopy (this applied only to uracil). Additionally, density-functional theory (DFT) methodologies were used to probe the energetic viability of several degradation pathways, including in the presence of the abovementioned ions. Three mechanisms were analysed via ribose ring-opening: dry, single-molecule water-assisted, and metal-assisted, wherein the last two mechanisms confirmed the mechanochemical degradation of both ribonucleosides into respective nucleobase moieties. These results can contribute to an astrobiological interpretation of the extraterrestrial sample's contents.</p>
           <p><a href="https://doi.org/10.3390/molecules28248006" target="_blank" rel="noopener noreferrer"><strong>DOI: 10.3390/molecules28248006</strong></a></p>
         </div>
       </div>
     </div>
 
-    <!-- Publication 3 -->
     <div class="timeline-item publication">
       <div class="timeline-card">
         <div class="timeline-header">
           <div>
             <strong>Da Química Bioinorgânica para a Química Prebiótica: Levar Mais Longe o Legado do Prof. Fraústo da Silva</strong>
-            <div class="meta">
-              Ana Franco, Gustavo P. Maia and José Armando Luísa da Silva · 2024 · SPQ - Sociedade Portuguesa de Química
-            </div>
+            <div class="meta">Ana Franco, Gustavo P. Maia and José Armando Luísa da Silva · 2024 · SPQ - Sociedade Portuguesa de Química</div>
           </div>
         </div>
-        <p><em>Click to view abstract</em></ps>
+        <p><em>Click to view abstract</em></p>
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p> From Bioinorganic Chemistry to Prebiotic Chemistry: Taking the Legacy of Prof. Fraústo da Silva. Professor Fraústo da Silva played a
-              decisive role in the introduction in Portugal,as well as in the development worldwide, ofBioinorganic Chemistry. This text identifies
-              some of his contributions in this field, as well as developments by other authors on topics related to Bioinorganic Chemistry
-              (with emphasis on the iron-sulphur and boron systems), which can support new approaches in Prebiotic Chemistry.</p>
+          <p>From Bioinorganic Chemistry to Prebiotic Chemistry: Taking the Legacy of Prof. Fraústo da Silva. Professor Fraústo da Silva played a decisive role in the introduction in Portugal, as well as in the development worldwide, of Bioinorganic Chemistry. This text identifies some of his contributions in this field, as well as developments by other authors on topics related to Bioinorganic Chemistry (with emphasis on the iron-sulphur and boron systems), which can support new approaches in Prebiotic Chemistry.</p>
           <p><a href="https://doi.org/10.52590/M3.P708.A30002745" target="_blank" rel="noopener noreferrer"><strong>DOI: 10.52590/M3.P708.A30002745</strong></a></p>
         </div>
       </div>
@@ -83,10 +60,5 @@
     <!-- Dynamically loaded BibTeX publications will be appended here -->
     <div id="pub-list"></div>
 
-  </div>
-</section>
-    
-    <!-- Dynamically loaded BibTeX publications will be appended here -->
-    <div id="pub-list"></div>
   </div>
 </section>
