--- a/sections/tutoring.html
+++ b/sections/tutoring.html
@@ -6,28 +6,25 @@
       <img src="images/portugal.png" alt="Portugal Flag" style="width:60px; height:auto; border-radius:6px;">
     </div>
     
-    <p>
-      <strong>Química não precisa de ser decorada — precisa de ser compreendida.</strong>  
-    </p>
+    <p><strong>Química não precisa de ser decorada — precisa de ser compreendida.</strong></p>
     <p>
       A minha abordagem centra‑se em ajudar os alunos a entenderem verdadeiramente como e porquê as reações químicas acontecem, desenvolvendo o bom senso químico essencial para pensar e raciocinar como um químico. O percurso começa pelos fundamentos da química, abordando ligações químicas, estrutura molecular e a relação entre estrutura e propriedade, e evolui de forma lógica para a estereoquímica e para os principais tipos de reações em química orgânica, como substituições, eliminações e adições.
       As aulas são personalizadas às necessidades de cada aluno, promovendo o pensamento crítico, a curiosidade científica e uma compreensão sólida e duradoura da matéria, com impacto direto no desempenho académico e na confiança perante a disciplina.
     </p>
 
     <div class="keywords" style="margin-top:30px">
-      <span>Química Geral </span>
-      <span>Química Orgânica </span>
-      <span>Escrita Cientifica </span>
+      <span>Química Geral</span>
+      <span>Química Orgânica</span>
+      <span>Escrita Cientifica</span>
     </div>
 
     <p style="font-family: 'Forte', cursive; color: #a0e4f0; font-size: 2.2em; margin-top:24px">
       Precisas de ajuda? Fala comigo!
     </p>
 
-    <!-- CONTACT INSIDE TUTORING -->
     <div class="contact-grid" style="margin-top:2rem; display:grid; grid-template-columns:1fr; gap:20px;">
       <div class="card">
-        <form id="contactForm" onsubmit="return handleContact(event)">
+        <form id="contactForm">
           <input id="name" placeholder="Your name" required>
           <input id="email" type="email" placeholder="Your email" required>
           <input id="subject" placeholder="Subject" required>
